<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nbv_planner</name>
  <version>0.1.0</version>
  <description>Next-Best-View planner using Octomap</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>action_msgs</depend>
  <depend>ufomap_msgs</depend>
  <depend>ufomap_rviz_plugins</depend>
  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  
  <depend>message_filters</depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <depend>libpcl-all-dev</depend>
  <depend>ompl</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>eigen</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>